K8S/notifications-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: senpaicq/notificationservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: notificationservice
  ports:
  - name: notificationservice
    protocol: TCP
    port: 80
    targetPort: 80
