K8S/notifications-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationnpservice-srv
spec:
  type: NodePort
  selector:
    app: notificationservice
  ports:
    - name: notificationservice
      protocol: TCP
      port: 80
      targetPort: 80
