K8S/ratings-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratingnpservice-srv
spec:
  type: NodePort
  selector:
    app: ratingservice
  ports:
    - name: ratingservice
      protocol: TCP
      port: 80
      targetPort: 80
